<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz App</string>
    <string name="title">Quiz App</string>
    <string name="question_1">1. How many schools exist in Udacity?</string>
    <string name="answer_1">5</string>
    <string name="answer_2">6</string>
    <string name="answer_3">7</string>
    <string name="question_2">2. What\'s the name for the newest Android language?</string>
    <string name="answer_4">kotlin</string>
    <string name="question_3">3. Pick two Cloud options from Udacity?</string>
    <string name="answer_5">Cloud Developer</string>
    <string name="answer_6">Cloud Engineer</string>
    <string name="answer_7">Cloud DevOps</string>
    <string name="question_4">4. Pick the newest language for iOS?</string>
    <string name="answer_8">Objective-C</string>
    <string name="answer_9">Kotlin</string>
    <string name="answer_10">Swift</string>
    <string name="question_5">5. Pick the name of View to enter input?</string>
    <string name="answer_11">EditText</string>
    <string name="answer_12">InputText</string>
    <string name="answer_13">RadioGroup</string>
    <string name="question_6">6. Pick the name of Android\'s manifest file?</string>
    <string name="answer_14">Manifest.xlm</string>
    <string name="answer_15">AndroidManifest.xml</string>
    <string name="answer_16">AndroidConfig.xml</string>
    <string name="question_7">7. Pick the name of folder containing strings.xml?</string>
    <string name="answer_17">strings_content</string>
    <string name="answer_18">String_values</string>
    <string name="answer_19">values</string>
    <string name="question_8">8. Name of folder storing app icons in Android?</string>
    <string name="answer_20">drawable</string>
    <string name="answer_21">iconContainer</string>
    <string name="answer_22">mipmap</string>

    <string name="congrats">Congrats! Your score is:</string>
    <string name="reset">Try again</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
</resources>